@@ -1,11 +1,20 @@
 
-2022-12-05  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+2022-12-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
 
-	* cobc.c: replace some incorrect '%d' format indicators with '%lu'
+	* cobc.h (struct cb_replace_src, struct list_replace): adapt internal
+	  structures for strict partial text replacement
+	* cobc.c (print_replace_text): PENDING
+	* pplex.l (set_print_replace_list, ppecho),
+	  ppparse.y (ppp_replace_src, ppp_replace_list_add): handle strict
+	  partial text replacement
 
 2022-12-06 Simon Sobisch <simonsobisch@gnu.org>
 
 	* field.c (validate_redefines): check for target not to have ANY LENGTH
+
+2022-12-05  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+
+	* cobc.c: replace some incorrect '%d' format indicators with '%lu'
 
 2022-12-03 Simon Sobisch <simonsobisch@gnu.org>
 
